# itscalledsoccer

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: R-CMD-check.yml  R-check-release.yml  R-test-coverage.yml  codeql.yml  cran-publish.yml  dependency-review.yml  gh-pages.yml  javascript-tests.yml  pypi-publish.yml  python-tests.yml  r-tests.yml  scorecard.yml
R-package/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  codecov.yml  cran-comments.md
R-package/R/: client.R  entities.R  imports.R  stats.R  utils.R
R-package/man/: AmericanSoccerAnalysis.Rd  pipe.Rd
R-package/revdep/: README.md
R-package/tests/testthat/: helpers.R  test_dummy.R  test_entities.R  test_httr_configs.R  test_init.R  test_stats_goals_added.R  test_stats_salaries.R  test_stats_xgoals.R  test_stats_xpass.R
asa-package/: core.py
docs/: index.md  reference.md
itscalledsoccer/: __init__.py  classes.py  client.py  errors.py  games.py  managers.py  players.py  referees.py  stadia.py
javascript-package/: .eslintrc.js  .gitignore  README.md  babel.config.json  jest.config.js  jest.setup.js  package-lock.json  package.json
javascript-package/src/: constants.js  index.d.ts  index.js  parameters.js  pluralize.js  validators.js
javascript-package/tst/: index.test.js  pluralize.test.js  validators.test.js
javascript-package/tst/mocks/: games-xgoals-payload.js  goalkeepers-goals-added-payload.js  goalkeepers-xgoals-payload.js  managers-payload.js  players-goals-added-payload.js  players-payload.js  players-salaries-payload.js  players-xgoals-payload.js  players-xpass-payload.js  referees-payload.js  stadia-payload.js  teams-goals-added-payload.js  teams-payload.js  teams-salaries-payload.js  teams-xgoals-payload.js  teams-xpass-payload.js
python-package/: README.md  mypy.ini  requirements.dev.txt  requirements.txt  setup.py
python-package/itscalledsoccer/: client.py  teams.py
python-package/tests/: test_asa.py
python-package/tests/features/: client.feature  entities.feature  environment.py  stats.feature  xgoals.feature  xpass.feature
python-package/tests/features/steps/: client.py  common_steps.py  g+.py  stats.py  xgoals.py  xpass.py
python-package/tests/mocks/: games_payload.json  games_xgoals_payload.json  goalkeepers_xgoals_payload.json  stadia_payload.json  teams_goals_added_payload.json  teams_payload.json  teams_salaries_payload.json  teams_xgoals_payload.json  teams_xpass_payload.json
r-package/: DESCRIPTION  NAMESPACE  README.md
r-package/R/: RcppExports.R  client.R  entities.R  lookups.R
r-package/src/: RcppExports.cpp
r-package/tests/: testthat.R
reference/: index.html
search/: search_index.json
tests/: test_client.py
tests/features/: client.feature  entities.feature  environment.py  g+.feature  stats.feature  tutorial.feature  xgoals.feature
tests/features/steps/: client.py  common_steps.py  stats.py  tutorial.py
tests/mocks/: goalkeepers_goals_added_payload.json  managers_payload.json  players_goals_added_payload.json  players_payload.json  players_salaries_payload.json  players_xgoals_payload.json  players_xpass_payload.json  referees_payload.json
tests/python/: simple_test.py  test_asa.py  test_simple.py
