[project]
name = "itscalledsoccer"
description = "Programmatically interact with the American Soccer Analysis API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "American Soccer Analysis", email = "americansocceranalysis@gmail.com" },
]
keywords = [
  "stats",
  "soccer",
  "api",
  "football",
  "american",
  "machine learning",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.31.0",
  "CacheControl>=0.13.1",
  "rapidfuzz>=3.2.0",
  "pandas>=2.0.3",
]
version = "1.2.1"

[project.urls]
Repository = "https://github.com/American-Soccer-Analysis/itscalledsoccer"

[project.optional-dependencies]
test = [
  "types-requests",
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.exclude-package-data]
itscalledsoccer = ["tests", "tests.*"]

[[tool.mypy.overrides]]
module = [
  "cachecontrol",
  "cachecontrol.heuristics",
  "fuzzywuzzy",
  "pandas",
  "setuptools",
  "rapidfuzz",
]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ["E501"]
