[project]
name = "itscalledsoccer"
description = "Programmatically interact with the American Soccer Analysis API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "American Soccer Analysis", email = "americansocceranalysis@gmail.com" },
]
keywords = [
  "stats",
  "soccer",
  "api",
  "football",
  "american",
  "machine learning",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.31.0",
  "CacheControl>=0.13.1",
  "rapidfuzz>=3.2.0",
  "pandas>=2.1.0",
]
version = "1.3.4"

[project.urls]
Repository = "https://github.com/American-Soccer-Analysis/itscalledsoccer"

[dependency-groups]
dev = [
  "types-requests",
  "pytest",
  "pytest-cov",
  "ty",
  "ruff",
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.exclude-package-data]
itscalledsoccer = ["tests", "tests.*"]

[tool.ruff.lint]
ignore = ["E501"]
extend-select = ["I"]
